--- a/examples.html
+++ b/examples.html
@@ -4,32 +4,78 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
     <title>Examples</title>
   </head>
   <body>
     <h1>Example 1</h1>
     <!-- use grid utilities -->
 
+    <div class="container">
+      <div class="row">
+        <div class="col-5 col-md-4 bg-primary">item 1</div>
+        <div class="col-3 col-md-5 bg-success">item 2</div>
+        <div class="col-4 col-md-3 bg-danger">item 3</div>
+      </div>
+    </div>
     <h1>Example 2</h1>
-    <div>Header</div>
-    <div>
-      Article 1
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-        commodi laborum, distinctio praesentium ipsam asperiores eius soluta
-        facere placeat beatae nulla accusantium. Placeat itaque repellat harum
-        nemo explicabo vel iusto!
-      </p>
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="16"
+      height="16"
+      fill="currentColor"
+      class="bi bi-alarm-fill"
+      viewBox="0 0 16 16"
+    >
+      <path
+        d="M6 .5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1H9v1.07a7.001 7.001 0 0 1 3.274 12.474l.601.602a.5.5 0 0 1-.707.708l-.746-.746A6.97 6.97 0 0 1 8 16a6.97 6.97 0 0 1-3.422-.892l-.746.746a.5.5 0 0 1-.707-.708l.602-.602A7.001 7.001 0 0 1 7 2.07V1h-.5A.5.5 0 0 1 6 .5zm2.5 5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5zM.86 5.387A2.5 2.5 0 1 1 4.387 1.86 8.035 8.035 0 0 0 .86 5.387zM11.613 1.86a2.5 2.5 0 1 1 3.527 3.527 8.035 8.035 0 0 0-3.527-3.527z"
+      />
+    </svg>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 container">
+          <div class="row"><div class="bg-danger">Header</div></div>
+          <div class="row">
+            <div class="col-md">
+              <div class="bg-primary">
+                Article 1
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Eveniet commodi laborum, distinctio praesentium ipsam
+                  asperiores eius soluta facere placeat beatae nulla
+                  accusantium. Placeat itaque repellat harum nemo explicabo vel
+                  iusto!
+                </p>
+              </div>
+            </div>
+            <div class="col-md">
+              <div class="bg-secondary">
+                Article 2
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptate voluptatum consectetur vel facere ex aperiam
+                  laudantium pariatur? Doloremque enim ab modi expedita alias,
+                  error, impedit atque quod veritatis dolorum amet!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="bg-success">Sidebar</div>
+        </div>
+      </div>
     </div>
-    <div>
-      Article 2
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
-        voluptatum consectetur vel facere ex aperiam laudantium pariatur?
-        Doloremque enim ab modi expedita alias, error, impedit atque quod
-        veritatis dolorum amet!
-      </p>
-    </div>
-    <div>Sidebar</div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
